# aivero-challenge

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  package.xml
launch/: run_for_test.launch
msg/: Solution.msg
random_number_generator/: Cargo.toml  Dockerfile
random_number_generator/src/: main.rs
results/: results.csv
running_max/: Dockerfile
running_max/app/src/: run_max.py
scripts/: publisher.py  verify.py
validator/: Cargo.toml  Dockerfile
validator/src/: main.rs
