[package]
name = "random_number_generator"
version = "0.1.0"
authors = ["Tobias Morell <tobias.morell@aivero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lapin = "1.2.3"
serde_json = "1.0.57"
log = "0.4.11"
env_logger = "0.7.1"
futures = { version = "0.3.5" }
async-std = "1.6.3"