[package]
name = "validator"
version = "0.1.0"
authors = ["Tobias Morell <tobias.morell@aivero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.11"
env_logger = "0.9.0"
futures = { version = "0.3.5" }
async-std = "1.6.3"
circular-queue = "0.2.6"